--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,85 @@
 body {
-  color: red;
-  font-size: 100px;
-  font-family: 'Nanum Gothic', sans-serf;
+  color: #333;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.4;
+  font-family: 'Nanum Gothic', sans-serif;
+}
+
+img {
+  display: block;
+}
+a {
+  text-decoration: none;
+}
+
+
+/* HEADER */
+header {
+  background-color: royalblue;
+}
+header .inner{
+  width: 1100px;
+  height: 120px;
+  margin: 0 auto;
+  background-color: orange;
+  position: relative;
+
+}
+header .logo{
+  height: 75px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  display: none;
+
+}
+
+header .sub-menu {
+
+}
+header .sub-menu ul.menu {
+  font-family: Arial, sans-serif;
+  display: flex;
+}
+header .sub-menu ul.menu li {
+  position: relative;
+}
+header .sub-menu ul.menu li::before {
+  content: "";
+  display: block;
+  width: 1px;
+  height: 12px;
+  background-color: #e5e5e5;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+
+}
+header .sub-menu ul.menu li::first-child::before {
+  display: none;
+}
+header .sub-menu ul.menu li a {
+  background-color: red;
+  font-size: 12px;
+  padding: 11px 16px;
+  display: block;
+  color: #656565;
+  text-decoration: none;
+}
+header .sub-menu ul.menu li a:hover {
+  color: #000;
+}
+
+header .sub-menu .search {
+
+}
+header .sub-menu .search input {
+  
+}
+header .sub-menu .search .material-icons {
+  
 }
